[package]
name = "usb2snes-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lazy_static = "1.4.0"
strum = "0.22"
strum_macros = "0.22"
structopt = { version = "0.3.13" }
websocket = "0.26.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
scan_fmt = "0.2.6"